Refactored, modal Details

--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,17 @@
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/rest-client.min.js"></script>
 
-<script src="app/Task.js"></script>
-<script src="app/Task_View.js"></script>
-<script src="app/Task_List_View.js"></script>
+<!-- Models -->
+<script src="app/models/Task.js"></script>
+
+<!-- Views -->
+<script src="app/views/Task_Modal_View.js"></script>
+<script src="app/views/Task_View.js"></script>
+<script src="app/views/Task_List_View.js"></script>
+
+<!-- Main -->
 <script src="app/index.js"></script>
+
 </body>
 </html>
 
