--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 
+<link rel="stylesheet" href="app/style.css">
+
 </head>
 <body>
 
@@ -30,6 +32,9 @@
 <script src="app/views/Task_Modal_View.js"></script>
 <script src="app/views/Task_View.js"></script>
 <script src="app/views/Task_List_View.js"></script>
+
+<!-- Other -->
+<script src="./app/controllers/Selection_Controller.js"></script>
 
 <!-- Main -->
 <script src="app/index.js"></script>
