--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,11 @@
 <title>Audrey</title>
 
 <!-- CSS -->
-<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+<!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">-->
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="app/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
