Added tags, broke selection

--- a/web/index.html
+++ b/web/index.html
@@ -11,20 +11,23 @@
 <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">-->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="lib/select/select2.min.css">
 
 <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-
 <div id="app" class="container">
-    <br/>
-</div>
+
+<select style="width: 100%;" class="bar" multiple="multiple"></select>
+
+</div> <!-- END CONTAINER -->
 
 <!-- JS -->
 <script src="lib/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/rest-client.min.js"></script>
+<script src="lib/select/select2.full.min.js"></script>
 
 <!-- Models -->
 <script src="app/models/Task.js"></script>
